--- a/index.html
+++ b/index.html
@@ -1,26 +1,63 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/ns.svg">
-    <title>Eralyt</title>
+    <title>Ns Documentation</title>
     <link rel=" stylesheet" href="./css/main.css">
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Eralyt</h1>
-        <p>En France, on n'a pas de pétrole, mais on a des idées...</p>
-      </header>
-      <div class="section">
-<p> 
-  <a href="./2html-doc.html">2html</a>
-</p>
+    <link rel=" stylesheet" href="./css/custom.css">
+    <script src="./js/main.js" defer></script>
+</head>
 
-      </div>
-    </div>)
-    <footer>
-    </footer>
-  </body>
+<body>
+
+    <div class="main-wrapper">
+
+        <div class="nav">
+            <div class="nw1">
+                
+            </div>
+        </div>
+
+        <div class="content">
+
+            <div class="cw1">
+                <div class="cw2">
+                    <header>
+                        <h1>ÉRALYT</h1>
+                        <p>En France, on n'a pas de pétrole, mais on a des idées...</p>
+                    </header>
+                    <div class="sections">
+                        <div class="section">
+                            <h2 id="2html">2html</h2>
+                            <a href="./2html-doc.html">2html</a>
+                        </div>
+                       
+
+                    </div>
+                </div>
+                <footer>
+                    <p>ÉRALYT data &copy;2022</p>
+                </footer>
+            </div>
+
+        </div>
+
+        <div class="topics">
+            <div class="tw1">
+
+                <div><span>Dans cet article</span></div>
+                <ul>
+                    <li><a href="#2html">2html</a></li>                    
+                </ul>
+
+            </div>
+        </div>
+
+    </div>
+
+</body>
+
 </html>
