--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <div class="main-wrapper">
 
       <div class="nav">
-        <div class="nw1">        <div>
-<svg class="logoe" viewBox="20 70 500 215" xmlns="http://www.w3.org/2000/svg">
+        <div class="nw1">        
+        <div><a href="./index.html">
+<svg class="logoe" viewBox="20 67 500 210" xmlns="http://www.w3.org/2000/svg">
   <defs>
   <style type="text/css">
    @font-face {
@@ -50,7 +51,7 @@
     <path style="fill: url(#gradient-4); stroke: rgb(65, 63, 26); paint-order: fill;" d="M 120.482 414.082 C 118.897 416.526 132.833 382.204 123.901 369.903 C 125.11 363.286 130.978 368.964 135.523 375.286 C 140.968 376.293 138.162 335.279 144.751 336.2 C 149.048 336.57 156.067 344.767 154.324 357.724 C 156.013 359.558 166.852 337.108 165.261 333.084 C 163.983 327.006 174.221 313.378 176.541 313.827 C 176.943 310.226 187.903 308.025 188.161 311.279 C 197.419 311.2 177.311 335.036 186.456 331.949 C 201.976 316.116 250.508 313.794 248.323 320.058 C 237.283 320.57 220.211 327.19 201.491 338.317 C 173.205 355.127 141.158 382.223 120.482 414.082 Z"/>
   </g>
   <path style="stroke: rgb(65, 63, 26); paint-order: fill; fill: url(#gradient-2);" d="M 132.539 148.83 C 141.798 128.039 167.65 107.306 184.532 102.076 C 188.928 100.715 200.701 97.34 201.964 98.916 C 200.207 100.804 203.123 103.413 192.853 105.343 C 190.181 105.845 184.933 108.217 181.148 109.299 C 170.467 112.352 173.388 117.071 182.285 116.252 C 189.007 115.633 196.799 119.975 192.307 122.976 C 182.323 129.645 156.897 122.174 162.814 126.351 C 168.411 130.302 179.704 141.621 160.054 135.53 C 148.996 129.379 132.627 149.064 132.539 148.83 Z"/>
-</svg>        </div>
+</svg>        </a></div>
          </div>
       </div>
 
@@ -58,14 +59,14 @@
         <div class="cw1">
           <div class="cw2">
             <header>
-              <h1>Éralyt-data</h1>
+              <h1>ÉRALYT-data</h1>
               <p>En France, on n'a pas de pétrole, mais on a des idées.</p>
             </header>
             <div class="sections">
 <section>
 <h2 id='0'>Utilitaires</h2>
 <p>
-<a href='./2html-doc.html' target='_blank'>2html</a> est un programme écrit en C++ qui permet d'éditer les pages html de ce site sous forme de texte formaté. 
+<a href='./2html-doc.html'>2html</a> est un programme écrit en C++ qui permet d'éditer les pages html de ce site sous forme de texte formaté. 
 </p>
 
 <p>
@@ -73,7 +74,7 @@ Le fichier texte utilise des balisent de mise en forme, de création de liens, d
 </p>
 
 <p>
-Par exemple si <a href='./2html-doc.txt' target='_blank'>2html-doc.txt</a> est le fichier formaté source, alors l'application à ce fichier du programme <span class='cs'>2html</span> par la commande : <span class='c'>./2html 2html-doc.txt</span> produira la page html  <a href='./2html-doc.html' target='_blank'>2html-doc.html</a>.
+Si par exemple <a href='./2html-doc.txt' target='_blank'>2html-doc.txt</a> est le fichier formaté source, alors l'application à ce fichier du programme <span class='cs'>2html</span> par la commande : <span class='c'>./2html 2html-doc.txt</span> produira la page html  <a href='./2html-doc.html' target='_blank'>2html-doc.html</a>.
 </p>
 
 <hr>
