--- a/2html-doc.html
+++ b/2html-doc.html
@@ -13,7 +13,9 @@
     <div class="main-wrapper">
 
       <div class="nav">
-        <div class="nw1">        <div>
+        <div class="nw1"> 
+               <div>
+               <a href="./index.html">
 <svg class="logoe" viewBox="20 70 500 215" xmlns="http://www.w3.org/2000/svg">
   <defs>
     <linearGradient gradientUnits="userSpaceOnUse" x1="159.563" y1="133.941" x2="159.563" y2="186.536" id="gradient-1" spreadMethod="pad" gradientTransform="matrix(1, 0, 0, 1, 49.789622, 86.255257)">
@@ -40,7 +42,8 @@
     <path style="fill: url(#gradient-4); stroke: rgb(65, 63, 26); paint-order: fill;" d="M 120.482 414.082 C 118.897 416.526 132.833 382.204 123.901 369.903 C 125.11 363.286 130.978 368.964 135.523 375.286 C 140.968 376.293 138.162 335.279 144.751 336.2 C 149.048 336.57 156.067 344.767 154.324 357.724 C 156.013 359.558 166.852 337.108 165.261 333.084 C 163.983 327.006 174.221 313.378 176.541 313.827 C 176.943 310.226 187.903 308.025 188.161 311.279 C 197.419 311.2 177.311 335.036 186.456 331.949 C 201.976 316.116 250.508 313.794 248.323 320.058 C 237.283 320.57 220.211 327.19 201.491 338.317 C 173.205 355.127 141.158 382.223 120.482 414.082 Z"/>
   </g>
   <path style="stroke: rgb(65, 63, 26); paint-order: fill; fill: url(#gradient-2);" d="M 132.539 148.83 C 141.798 128.039 167.65 107.306 184.532 102.076 C 188.928 100.715 200.701 97.34 201.964 98.916 C 200.207 100.804 203.123 103.413 192.853 105.343 C 190.181 105.845 184.933 108.217 181.148 109.299 C 170.467 112.352 173.388 117.071 182.285 116.252 C 189.007 115.633 196.799 119.975 192.307 122.976 C 182.323 129.645 156.897 122.174 162.814 126.351 C 168.411 130.302 179.704 141.621 160.054 135.53 C 148.996 129.379 132.627 149.064 132.539 148.83 Z"/>
-</svg>        </div>
+</svg>        </a>
+         </div>
          </div>
       </div>
 
