--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </p>
 
 <p>
-Le fichier texte utilise des balisent de mise en forme, de création de liens, d'insertion d'images, d'affichage de code avec coloration syntaxique...etc. C'est une sorte de Markdown personnalisé.
+Le fichier texte source utilise des balises de mise en forme, de création de liens, d'insertion d'images, d'affichage de code avec coloration syntaxique...etc. C'est une sorte de Markdown personnalisé.
 </p>
 
 <p>
