--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Le seul contenu disponible pour l'instant est le suivant :
 <section>
 <h2 id='0'>2html</h2>
 <p>
-<a href='./2html-doc.html'>2html</a> est un programme écrit en C++ qui permet d'éditer les pages html de ce site sous forme de texte formaté. 
+<a href='./content/utilitaires/2html-doc.html'>2html</a> est un programme écrit en C++ qui permet d'éditer les pages html de ce site sous forme de texte formaté. 
 </p>
 
 <p>
@@ -71,7 +71,7 @@ Le fichier texte utilise des balisent de mise en forme, de création de liens, d
 </p>
 
 <p>
-Par exemple si <a href='./2html-doc.txt'>2html-doc.txt</a> est le fichier formaté source, alors l'application à ce fichier du programme <span class='cs'>2html</span> par la commande : <span class='c'>./2html 2html-doc.txt</span> produira la page html  <a href='./2html-doc.html'>2html-doc.html</a>.
+Par exemple si <a href='./content/utilitaires/2html-doc.txt'>2html-doc.txt</a> est le fichier formaté source, alors l'application à ce fichier du programme <span class='cs'>2html</span> par la commande : <span class='c'>./2html 2html-doc.txt</span> produira la page html  <a href='./2html-doc.html'>2html-doc.html</a>.
 </p>
 
 <hr>
