divers-liens utiles

--- a/content/divers/liens.html
+++ b/content/divers/liens.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/ns.svg">
-    <title>2html</title>
+    <title>ÉRALYT liens</title>
     <link rel=" stylesheet" href="../../css/main.css">
     <link rel=" stylesheet" href="../../css/custom.css">
   <script src="../../js/main.js" defer></script>
@@ -48,32 +48,29 @@
         <div class="cw1">
           <div class="cw2">
             <header>
-              <h1>2html</h1>
-              <p>Convertit du texte formaté en page HTML.</p>
+              <h1>Sites utiles</h1>
+              <p></p>
             </header>
             <div class="sections">
 <section>
-<h2 id='0'>2html</h2>
-<p>
-<span class='cs'>2html</span> est un programme écrit en C++ qui permet d'éditer les pages html de ce site sous forme de texte formaté. 
-</p>
-
-<p>
-Le fichier texte utilise des balises de mise en forme, de création de liens, d'insertion d'images, d'affichage de code avec coloration syntaxique...etc. C'est une sorte de Markdown personnalisé.
-</p>
-
-<p>
-Si par exemple <a href='./2html-doc.txt'>2html-doc.txt</a> est le fichier formaté source, alors l'application à ce fichier du programme <span class='cs'>2html</span> par la commande : <span class='c'>./2html 2html-doc.txt</span> produira la page html complète de documentation de <span class='cs'>2html</span> suivante :   <a href='./2html-doc.html'>2html-doc.html</a>, avec le menu <i>"Dans cet article"</i> synchronisé avec le défilement de la page.
-</p>
+<h2 id='0'>Plateformes de cours en ligne.</h2>
+<ul>
+<li><a href='https://coursera.org'target='_blank'>Coursera</a></li>
+<li><a href='https://edx.org'target='_blank'>edX</a></li>
+<li><a href='https://openedu.ru'target='_blank'>Openedu</a></li>
+</ul>
 
 <hr>
 </section>
 
 <section>
-<h2 id='1'>Documentation 2html</h2>
-<p>
-Une description détaillée de l'utilisation de <span class='cs'>2html</span> et des différentes balises est consultable ici : <a href='./2html-doc.html'>documentation 2html</a>
-</p>
+<h2 id='1'>Références</h2>
+<ul>
+<li><a href='https://developer.mozilla.org/fr/'target='_blank'>MDN Web Docs Mozilla</a></li>
+<li><a href='https://en.cppreference.com/w/'target='_blank'>Cpp Reference</a></li>
+<li><a href='https://docs.microsoft.com/fr-fr/cpp/cpp/welcome-back-to-cpp-modern-cpp?view=msvc-170'target='_blank'>docs Microsoft</a></li>
+<li><a href='https://fr.reactjs.org/'target='_blank'>React</a></li>
+</ul>
 
 <hr>
 </section>
@@ -89,8 +86,8 @@ Une description détaillée de l'utilisation de <span class='cs'>2html</span> et
       <div class="topics">
         <div class="tw1">
           <div><span>Dans cet article</span></div>
-          <ul><li><a href='#0'>2html</a></li>
-<li><a href='#1'>Documentation 2html</a></li>
+          <ul><li><a href='#0'>Plateformes de cours en ligne.</a></li>
+<li><a href='#1'>Références</a></li>
            </ul>
 
         </div>
